modifing projects cards

--- a/index.html
+++ b/index.html
@@ -142,14 +142,8 @@
               />
               <div class="card-body">
                 <h5 class="card-title text-primary">Student Portal</h5>
-                <p class="card-text">
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                  Molestiae enim quam laboriosam, natus adipisci nulla corporis
-                  quos tenetur iure dolorem quibusdam dolorum nobis incidunt vel
-                  voluptatem nisi eum obcaecati corrupti. Lorem ipsum dolor sit
-                  amet consectetur adipisicing elit. Accusantium rem facere,
-                  dolorem temporibus laborum incidunt earum architecto
-                  exercitationem eligendi maiores 
+                <p class="card-text" id="school-portal">
+                 A front-end web application template designed with HTML, CSS, JavaScript, and Bootstrap to simplify school operations. It provides structured modules for managing students, courses, timetables, and records. The system features a professional interface, organized layouts, and responsive design for accessibility across devices. This project showcases the ability to design and implement user-focused dashboards and management tools, reflecting practical problem-solving skills in educational technology 
                 </p>
                 <button class="flex justify-content-center align-content-center btn btn-primary h-50 w-100  p-2 text-white bg-primary font">
                   View
@@ -160,21 +154,15 @@
           <div class="col-md-4 mb-4">
             <div class="card">
               <img
-                src="./images/Anate's Family.png"
+                src="./images/happy-store.jpg"
                 class="card-img-top"
                 alt="Project 2"
                 height="350" width="150"
               />
               <div class="card-body">
                 <h5 class="card-title text-primary ">E-commerice web site </h5>
-                <p class="card-text">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Exercitationem delectus quasi quas dolores temporibus adipisci
-                  ab suscipit amet. Excepturi explicabo soluta cupiditate
-                  commodi voluptates tenetur perferendis animi aperiam quam
-                  dolorem?. Lorem ipsum dolor sit amet consectetur adipisicing
-                  elit. Ut consectetur natus tenetur blanditiis. Ea optio ad
-                  animi illum cum quis. Nesciunt  
+                <p class="card-text" id="school-portal">
+                  An interactive and mobile-first e-commerce web- site developed using HTML, CSS, JavaScript, and Bootstrap. It includes intuitive navigation, product categories, shopping cart UI, and call-to-action sections tailored for online businesses. This project highlights responsive design skills, component reusability, and practical application of front-end development techniques in creating real-world e-commerce platforms..  
                 </p>
                 <button class="flex justify-content-center align-content-center btn btn-primary h-50 w-100  p-2 text-white bg-primary font">
                   View
@@ -185,20 +173,15 @@
           <div class="col-md-4 mb-4">
             <div class="card">
               <img
-                src="./images/download.jpg"
+                src="./images/shop-more.png"
                 class="card-img-top"
                 alt="Project 3"
                 height="350" width="150"
               />
               <div class="card-body">
                 <h5 class="card-title text-primary">E-commerice web site-2</h5>
-                <p class="card-text">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Asperiores illo quod rerum tenetur dolor ipsam blanditiis
-                  optio assumenda porro laborum, ipsa soluta! Amet at sapiente
-                  laboriosam culpa doloribus quasi ducimus? Lorem ipsum dolor,
-                  sit amet consectetur adipisicing elit. Laudantium animi
-                  obcaecati blanditiis voluptatem. Cum similique obcaecati
+                <p class="card-text" id="school-portal">
+                  A fully responsive e-commerce web template built with HTML, CSS, and JavaScript. It features a clean and user-friendly interface for browsing products, detailed product pages, and a structured layout optimized for both desktop and mobile devices. The project demonstrates strong UI design principles, efficient code structure, and best practices in building scalable online store front-ends. 
                   
                 </p>
                 <button class="flex justify-content-center align-content-center btn btn-primary h-50 w-100  p-2 text-white bg-primary font">
@@ -275,7 +258,7 @@
         <div class="col-12 col-md-6 col-lg-3 mb-4">
           <div class="card text-center text-md-start h-100">
              <img
-                src=".images/SirFemoskey.png"
+                src="./images/SirFemoskey.png"
                 class="card-img-top w-100 rounded-circle p-2"
                 alt="Project 3"
                 
