modifing teams card section

--- a/index.html
+++ b/index.html
@@ -212,8 +212,8 @@
             <div class="card-body">
               <h5 class="card-title">Aka'aba Musa Akidi</h5>
               <h6 class="text-info card-subtext">Full Stack Developer & <span class="text-danger">Mentor</span></h6>
-              <p class="card-text">Passionate about building scalebale and user-friendly web applications. with expertise in both Front-end and Back-end technologies. Also committed to mentoring aspiring developers , sharing practical insights, and guiding them toward growth and success.</p>
-              <a href="#" class="btn btn-primary w-100">Get in Touch</a>
+              <p class="card-text" id="team-detail" style="position: relative;top: 20px;">Passionate about building scalebale and user-friendly web applications. with expertise in both Front-end and Back-end technologies. Also committed to mentoring aspiring developers , sharing practical insights, and guiding them toward growth and success.</p>
+              <a href="#" class="btn btn-primary w-100" style="position: relative;top: 20px;">Get in Touch</a>
             </div>
           </div>
         </div>
@@ -230,8 +230,8 @@
             <div class="card-body">
               <h5 class="card-title">Muhmmed Jamiu</h5>
               <h6 class="text-info card-subtext">Front-end Developer & UI/UX Designer</h6>
-              <p class="card-text">A Front-end developer and UI/UX designer passionate about creating responsive, user-friendly.skilled in modern web technologiesand design principles.</p>
-              <a href="#" class="btn btn-primary w-100 act-btn">Get in Touch</a>
+              <p class="card-text" id="team-detail">A Front-end developer and UI/UX designer passionate about creating responsive, user-friendly.skilled in modern web technologiesand design principles.</p>
+              <a href="#" class="btn btn-primary w-100 act-btn" style="position: relative;top:4px;">Get in Touch</a>
             </div>
           </div>
         </div>
@@ -247,9 +247,9 @@
               />
             <div class="card-body">
             <h5 class="card-title">Momoh Jimoh Hashid</h5>
-              <h6 class="text-info card-subtext">Front-end Developer & UI/UX Designer</h6>
-              <p class="card-text">Passionate about crafting responsive user-friendly web interfacewith expertise in the modern Front-end technologies.Skilled  UI/UX design, creating intuitive and visually enagaging digital experiences that seamless blend design with functionality.</p>
-              <a href="#" class="btn btn-primary w-100 ">Get in Touch</a>
+              <h6 class="text-info card-subtext" >Front-end Developer & UI/UX Designer</h6>
+              <p class="card-text" id="team-detail">Passionate about crafting responsive user-friendly web interfacewith expertise in the modern Front-end technologies.Skilled  UI/UX design, creating intuitive and visually enagaging digital experiences that seamless blend design with functionality.</p>
+              <a href="#" class="btn btn-primary w-100 " style="position: relative;top: 12px;">Get in Touch</a>
             </div>
           </div>
         </div>
@@ -264,10 +264,10 @@
                 
               />
             <div class="card-body">
-             <h5 class="card-title">Oluwafemi Lawal</h5>
+             <h5 class="card-title" style="position: relative;top: 10px;">Oluwafemi Lawal</h5>
               <h6 class="text-info card-subtext">Product Designer &   <span class="text-danger">Mentor</span></h6>
-              <p class="card-text">Passionate about creating intuitive and visually engaging digital experiences.Skilled in designing user-centered products that balance aesthetics with functionality. while also mentoring aspiring designer to grow their creativity and confidence.</p>
-              <a href="#" class="btn btn-primary w-100 act-btn">Get in Touch</a>
+              <p class="card-text" id="team-detail" style="position: relative;top: 20px;">Passionate about creating intuitive and visually engaging digital experiences.Skilled in designing user-centered products that balance aesthetics with functionality. while also mentoring aspiring designer to grow their creativity and confidence.</p>
+              <a href="#" class="btn btn-primary w-100 act-btn" style="position: relative; top: 40px;">Get in Touch &rArr;</a>
             </div>
           </div>
         </div>
