--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@
         <span style="font-weight: bolder; letter-spacing: 1px"
           >Abdulsalam Muhammed Jamiu</span
         >
-        <!-- <span>JamoskeyDev</span> -->
         <small>Email: <a  
           class="social-link"
           href="#">anatemuhammed@gmail.com</a> </small>
@@ -32,7 +31,15 @@
         <small>Behance: <a  class="social-link" href="#behance.net/muhammedjamiu001">behance.net/muhammedjamiu001</a> </small>
       </div>
     </div>
-
+<!-- modal message -->
+ <section class="modal-container">
+  <div class="modal-img"></div>
+  <main class="modal-con">
+    <h2>Coming Soon</h2>
+    <h4>Thank You</h4>
+    <button class="modal-btn">OK</button>
+  </main>
+ </section>
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary w-100 fixed-top" id="top-fixed">
       <div class="container-fluid">
@@ -213,7 +220,7 @@
               <h5 class="card-title">Aka'aba Musa Akidi</h5>
               <h6 class="text-info card-subtext">Full Stack Developer & <span class="text-danger">Mentor</span></h6>
               <p class="card-text " id="team-detail" style="position: relative;top: 10px;">Passionate about building scalebale and user-friendly web applications. with expertise in both Front-end and Back-end technologies. Also committed to mentoring aspiring developers , sharing practical insights, and guiding them toward growth and success.</p>
-              <a href="#" class="btn btn-primary w-100 " style="position: relative;top: 12px;">Get in Touch</a>
+              <a href="#" class="btn btn-primary w-100 " style="position: relative;top: 12px;" id="cta-btn">Get in Touch</a>
             </div>
           </div>
         </div>
@@ -231,7 +238,7 @@
               <h5 class="card-title">Muhmmed Jamiu</h5>
               <h6 class="text-info card-subtext">Front-end Developer & UI/UX Designer</h6>
               <p class="card-text" id="team-detail">A Front-end developer and UI/UX designer passionate about creating responsive, user-friendly.skilled in modern web technologiesand design principles.</p>
-              <a href="#" class="btn btn-primary w-100 act-btn" style="position: relative;top:4px;">Get in Touch</a>
+              <a href="#" class="btn btn-primary w-100 act-btn" style="position: relative;top:4px;" id="cta-btn">Get in Touch</a>
             </div>
           </div>
         </div>
@@ -249,7 +256,7 @@
             <h5 class="card-title">Momoh Jimoh Hashid</h5>
               <h6 class="text-info card-subtext" >Front-end Developer & UI/UX Designer</h6>
               <p class="card-text" id="team-detail">Passionate about crafting responsive user-friendly web interfacewith expertise in the modern Front-end technologies.Skilled  UI/UX design, creating intuitive and visually enagaging digital experiences that seamless blend design with functionality.</p>
-              <a href="#" class="btn btn-primary w-100 " style="position: relative;top: 12px;">Get in Touch</a>
+              <a href="#" class="btn btn-primary w-100 " style="position: relative;top: 12px;" id="cta-btn">Get in Touch</a>
             </div>
           </div>
         </div>
@@ -267,7 +274,7 @@
              <h5 class="card-title" style="position: relative;top: 10px;">Oluwafemi Lawal</h5>
               <h6 class="text-info card-subtext">Product Designer &   <span class="text-danger">Mentor</span></h6>
               <p class="card-text" id="team-detail" style="position: relative;top: 10px;">Passionate about creating intuitive and visually engaging digital experiences.Skilled in designing user-centered products that balance aesthetics with functionality. while also mentoring aspiring designer to grow their creativity and confidence.</p>
-              <a href="#" class="btn btn-primary w-100 act-btn" style="position: relative; top: 10px;">Get in Touch &rArr;</a>
+              <a href="#" class="btn btn-primary w-100 act-btn" style="position: relative; top: 10px;" id="cta-btn">Get in Touch &rArr;</a>
             </div>
           </div>
         </div>
