--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>JamoskeyDev Portfolio</title>
-    <!-- <link rel="favicon" href="../image/download.jpg"> -->
+    <!-- Favicon section -->
+    <link rel="icon" href="./images/jamoskeydev01.jpg">
     <!-- Bootstrap 5 CSS -->
    <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="./bootstrap/pro-style/css/bootstrap.min.css" />
@@ -27,8 +28,8 @@
         <small>Email: <a  
           class="social-link"
           href="#">anatemuhammed@gmail.com</a> </small>
-        <small>Github: <a  class="social-link" href="#github.com/Muhammed-jamiu">github.com/Muhammed-jamiu</a> </small>
-        <small>Behance: <a  class="social-link" href="#behance.net/muhammedjamiu001">behance.net/muhammedjamiu001</a> </small>
+        <small>Github: <a  class="social-link" href="github.com/Muhammed-jamiu">github.com/Muhammed-jamiu</a> </small>
+        <small>Behance: <a  class="social-link" href="behance.net/muhammedjamiu001">behance.net/muhammedjamiu001</a> </small>
       </div>
     </div>
 <!-- modal message -->
@@ -112,7 +113,7 @@
             my digital work space where creativity meet code. <strong class=" text-primary">with (2) two years of experience.</strong> </p> <span class="main">I specialize in building responsive, user-friendly web interface that blend functionality with sleek design.</span>
           </p>
           <p class="mt-3 main">
-            I'm currently <strong class="text-primary">Open to work</strong> whether it's <strong class="text-primary">Full time role</strong> or a<strong class="text-primary"> Freelance Project.</strong> I'm excited to collaborate with <strong class="text-primary">start up and estabilshed companies</strong> to bring digital ideal to life. 
+            I'm currently <strong class="text-primary">Open to work</strong> whether it's <strong class="text-primary">Full time role</strong> or a<strong class="text-primary"> Freelance Project.</strong> I'm excited to collaborate with <strong class="text-primary">start up and estabilshed companies</strong> to bring their digital ideal to life. 
 
           </p>
         </div>
@@ -148,11 +149,11 @@
                 height="350" width="150"
               />
               <div class="card-body">
-                <h5 class="card-title text-primary">Student Portal</h5>
+                <h5 class="card-title text-primary">SEA Student Portal</h5>
                 <p class="card-text" id="school-portal">
                  A front-end web application template designed with HTML, CSS, JavaScript, and Bootstrap to simplify school operations. It provides structured modules for managing students, courses, timetables, and records. The system features a professional interface, organized layouts, and responsive design for accessibility across devices. This project showcases the ability to design and implement user-focused dashboards and management tools, reflecting practical problem-solving skills in educational technology 
                 </p>
-                <button class="flex justify-content-center align-content-center btn btn-primary h-50 w-100  p-2 text-white bg-primary font">
+                <button class="flex justify-content-center align-content-center btn btn-primary h-50 w-100  p-2 text-white bg-primary font" id="cta-btn">
                   View
                 </button> 
               </div>
@@ -171,7 +172,7 @@
                 <p class="card-text" id="school-portal">
                   An interactive and mobile-first e-commerce web- site developed using HTML, CSS, JavaScript, and Bootstrap. It includes intuitive navigation, product categories, shopping cart UI, and call-to-action sections tailored for online businesses. This project highlights responsive design skills, component reusability, and practical application of front-end development techniques in creating real-world e-commerce platforms..  
                 </p>
-                <button class="flex justify-content-center align-content-center btn btn-primary h-50 w-100  p-2 text-white bg-primary font">
+                <button class="flex justify-content-center align-content-center btn btn-primary h-50 w-100  p-2 text-white bg-primary font" id="cta-btn">
                   View
                 </button> 
               </div>
@@ -191,7 +192,7 @@
                   A fully responsive e-commerce web template built with HTML, CSS, and JavaScript. It features a clean and user-friendly interface for browsing products, detailed product pages, and a structured layout optimized for both desktop and mobile devices. The project demonstrates strong UI design principles, efficient code structure, and best practices in building scalable online store front-ends. 
                   
                 </p>
-                <button class="flex justify-content-center align-content-center btn btn-primary h-50 w-100  p-2 text-white bg-primary font">
+                <button class="flex justify-content-center align-content-center btn btn-primary h-50 w-100  p-2 text-white bg-primary font" id="cta-btn">
                   View
                 </button> 
               </div>
@@ -220,7 +221,7 @@
               <h5 class="card-title">Aka'aba Musa Akidi</h5>
               <h6 class="text-info card-subtext">Full Stack Developer & <span class="text-danger">Mentor</span></h6>
               <p class="card-text " id="team-detail" style="position: relative;top: 10px;">Passionate about building scalebale and user-friendly web applications. with expertise in both Front-end and Back-end technologies. Also committed to mentoring aspiring developers , sharing practical insights, and guiding them toward growth and success.</p>
-              <a href="#" class="btn btn-primary w-100 " style="position: relative;top: 12px;" id="cta-btn">Get in Touch</a>
+              <a href="#" class="btn btn-primary w-100 " style="position: relative;top: 12px;" >Get in Touch</a>
             </div>
           </div>
         </div>
@@ -238,7 +239,7 @@
               <h5 class="card-title">Muhmmed Jamiu</h5>
               <h6 class="text-info card-subtext">Front-end Developer & UI/UX Designer</h6>
               <p class="card-text" id="team-detail">A Front-end developer and UI/UX designer passionate about creating responsive, user-friendly.skilled in modern web technologiesand design principles.</p>
-              <a href="#" class="btn btn-primary w-100 act-btn" style="position: relative;top:4px;" id="cta-btn">Get in Touch</a>
+              <a href="#" class="btn btn-primary w-100 act-btn" style="position: relative;top:4px;">Get in Touch</a>
             </div>
           </div>
         </div>
@@ -256,7 +257,7 @@
             <h5 class="card-title">Momoh Jimoh Hashid</h5>
               <h6 class="text-info card-subtext" >Front-end Developer & UI/UX Designer</h6>
               <p class="card-text" id="team-detail">Passionate about crafting responsive user-friendly web interfacewith expertise in the modern Front-end technologies.Skilled  UI/UX design, creating intuitive and visually enagaging digital experiences that seamless blend design with functionality.</p>
-              <a href="#" class="btn btn-primary w-100 " style="position: relative;top: 12px;" id="cta-btn">Get in Touch</a>
+              <a href="#" class="btn btn-primary w-100 " style="position: relative;top: 12px;">Get in Touch</a>
             </div>
           </div>
         </div>
@@ -274,7 +275,7 @@
              <h5 class="card-title" style="position: relative;top: 10px;">Oluwafemi Lawal</h5>
               <h6 class="text-info card-subtext">Product Designer &   <span class="text-danger">Mentor</span></h6>
               <p class="card-text" id="team-detail" style="position: relative;top: 10px;">Passionate about creating intuitive and visually engaging digital experiences.Skilled in designing user-centered products that balance aesthetics with functionality. while also mentoring aspiring designer to grow their creativity and confidence.</p>
-              <a href="#" class="btn btn-primary w-100 act-btn" style="position: relative; top: 10px;" id="cta-btn">Get in Touch &rArr;</a>
+              <a href="#" class="btn btn-primary w-100 act-btn" style="position: relative; top: 10px;" >Get in Touch </a>
             </div>
           </div>
         </div>
