card-section can now be close on mobile view point

--- a/index.html
+++ b/index.html
@@ -23,14 +23,15 @@
       />
       <div class="min-card-content">
         <span style="font-weight: bolder; letter-spacing: 1px"
-          >Abdulsalam Muhammed Jamiu</span
+          >Muhammed Jamiu</span
         >
-        <small>Email: <a  
+        <small><a  
           class="social-link"
           href="#">anatemuhammed@gmail.com</a> </small>
-        <small>Github: <a  class="social-link" href="github.com/Muhammed-jamiu">github.com/Muhammed-jamiu</a> </small>
-        <small>Behance: <a  class="social-link" href="behance.net/muhammedjamiu001">behance.net/muhammedjamiu001</a> </small>
+        <small> <a  class="social-link" href="github.com/Muhammed-jamiu">github.com/Muhammed-jamiu</a> </small>
+        <small> <a  class="social-link" href="behance.net/muhammedjamiu001">behance.net/muhammedjamiu001</a> </small>
       </div>
+      <div title="Close-Card" class="close-card">X</div>
     </div>
 <!-- modal message -->
  <section class="modal-container">
@@ -405,7 +406,8 @@
     </footer>
 
     <!-- Bootstrap Bundle JS -->
-    <script type="text/javascript" src="./index.js"></script>
+    <script type="text/javascript" src="./js-files/index.js"></script>
+    <script type="text/javascript" src="./js-files/close-card.js"></script>
     <script
       type="text/javascript"
       src="./bootstrap/pro-style/js/bootstrap.bundle.min.js"
