section added to hero-section

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
  
   </head>
   <body>
+
+    <!-- Image card Section below -->
+
     <!-- Mobile Card -->
     <div class="mobile-card">
       <img
@@ -31,12 +34,12 @@
         <small> <a  class="social-link" href="github.com/Muhammed-jamiu">github.com/Muhammed-jamiu</a> </small>
         <small> <a  class="social-link" href="behance.net/muhammedjamiu001">behance.net/muhammedjamiu001</a> </small>
       </div>
-      <div title="Close-Card" class="close-card">X</div>
+      <div title="Close-Card" class="close-card ">X</div>
     </div>
 <!-- modal message -->
  <section class="modal-container">
   <div class="modal-img"></div>
-  <main class="modal-con">
+  <main class="modal-con ">
     <h2>Coming Soon</h2>
     <h4>Thank You</h4>
     <button class="modal-btn">OK</button>
@@ -44,9 +47,9 @@
  </section>
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary w-100 fixed-top" id="top-fixed">
-      <div class="container-fluid">
+      <div class="container-fluid ">
         <a class="navbar-brand" href="#"
-          ><span style="font-weight: bolder">JAMOS</span>
+          ><span style="font-weight: bolder ">JAMOS</span>
           <span
             style="
               color: greenyellow;
@@ -108,6 +111,16 @@
           </span>
           <h2 class="main h4 mt-3 mb-4 text-white "> A Frontend Developer & UI/UX Designer</h2>
           <h2 class="main h4  mb-4 " style="position: relative; top: -20px; color: white;"> Based In Nigeria</h2>
+          <div class="img-test">
+            <img src="./images/jamoskeydev.jpg" width="80" height="80" alt="">
+            <div>
+              <ul class="list-con">
+                <li>Home</li>
+                <li>Profile</li>
+                <li>About Me</li>
+              </ul>
+            </div>
+          </div>
           <p class="main">
             Welcome to
             <span class="navbar-brand"><strong>JamoskeyDev,</strong></span>
